# example-ed-tech

./: .gitignore  README.md  pyproject.toml
core/: settings.py  urls.py
course/: admin.py  models.py  serializers.py  urls.py  views.py
course/migrations/: 0001_initial.py  0002_alter_lecturer_email_alter_lecturer_phone_number.py  0003_alter_course_description_alter_language_description_and_more.py  0004_alter_course_created_at_alter_course_updated_at_and_more.py
course/tests/: test_models.py
course/views/: course_view.py  language_view.py  lecturer_view.py
homework/: admin.py  models.py  repositories.py  serializers.py  urls.py  views.py
homework/migrations/: 0001_initial.py  0001_squashed_0004_alter_homeworkanswermodel_files.py  0002_alter_homeworkanswermodel_files.py  0002_initial.py  0003_alter_homeworkanswermodel_files.py  0004_alter_homeworkanswermodel_files.py  0005_alter_homeworkanswermodel_files.py  0006_alter_homeworkanswermodel_files.py
homework/tests/: test_api.py  test_models.py
homework/views/: answer_views.py  grade_views.py  task_views.py
quiz/: admin.py  models.py  serializers.py  urls.py
quiz/migrations/: 0001_initial.py  0001_squashed_0002_initial.py  0002_initial.py
quiz/views/: final_quiz_answer_views.py  final_quiz_question_views.py  final_quiz_views.py  lesson_quiz_answer_views.py  lesson_quiz_question_views.py  lesson_quiz_views.py
tests/course/: test_models.py
tests/quiz/: test_models.py  test_views.py
user/: admin.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  (+1 more)
(+3 files in other folders)
