[tool.poetry]
name = "example-ed-tech"
version = "0.1.0"
description = ""
authors = ["Dzhurunov Tamerlan <dzhurunovt@gmail.com>"]
readme = "README.md"
packages = [{include = "example_ed_tech"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
psycopg2 = "^2.9.5"
python-environ = "^0.4.54"
environ = "^1.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"

pytest = "^7.2.1"
pytest-django = "^4.5.2"
django-configurations = "^2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
